--- a/src/pages/pages/Cadastro/styles.css
+++ b/src/pages/pages/Cadastro/styles.css
@@ -1,10 +1,29 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Poppins:wght@200;300&family=Questrial&family=Ubuntu:ital,wght@0,300;0,500;1,300;1,400&display=swap');
+
+html,
+body {
+    font-family: 'Questrial';
+}
+
+h3 {
+    margin-bottom: 2rem;
+}
+.Auth-form-img {
+    max-width:100px;
+    max-height:100px;
+    width: auto;
+    height: auto;
+}
+
+
 .Auth-form-container {
     display: flex;
     justify-content: center;
+    margin-top: 7rem;
     flex-direction: column;
     align-items: center;
     width: 100vw;
     height: 100vh;
-    
-  }
+
+     }
 
