--- a/src/components/CadastroUsuario/styles.css
+++ b/src/components/CadastroUsuario/styles.css
@@ -9,8 +9,9 @@ h3 {
     margin-bottom: 2rem;
 }
 .Auth-form-img {
-    max-width:100px;
-    max-height:100px;
+    margin-left: 0%;
+    max-width:5rem;
+    max-height:5rem;
     width: auto;
     height: auto;
 }
@@ -23,7 +24,17 @@ h3 {
     flex-direction: column;
     align-items: center;
     width: 100vw;
-    height: 100vh;
+    height: 115vh;
+    
 
      }
+
+     .btn-btn-primary {
+        color:  black;
+        background-color: #76BB4C;
+      }
+    
+      .btn-btn-primary:hover {
+        border-color: #6033AA;
+      }
 
